--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=">
-  <title></title>
-</head>
-<body>
-  <h1> Ms. Neumann's Website </h1>
+<html>
   
+  <body>
+    <h1> Iman's Website </h1>
+  </body>
   
-</body>
-  
-  
-<style>
- h1 {
-  color: gold;
-  text-align: center;
-}
+  <style>
+        body {
+            background-color: lightblue;
+          }
 
-body {
-  background-color: salmon;
-} 
+          h1 {
   
+            color: white;
+            text-aligh: center;
+            font-size: 80px;
+  
+            }
   </style>
+  
 </html>
