--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <style>
         body {
-            background-color: lightblue;
+            background-color: salmon;
           }
 
           h1 {
