--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   
   <body>
     <h1> Iman's Website </h1>
+    <img src = "pic.jpeg" alt="personal artifact">
+    
+    
   </body>
   
   <style>
