--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <body>
     <h1> Iman's Website </h1>
     <img src = "pic.jpeg" alt="personal artifact">
-    
+    <iframe src="https://scratch.mit.edu/projects/428812812/embed" 
+            allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     
   </body>
   
