--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <iframe src="https://scratch.mit.edu/projects/428812812/embed" 
             allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     
+    <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="index.html">Games</a></li>
+    <li><a href="index.html">Art</a></li>
+    <li><a href="index.html">More</a></li>
+  </ul>
+    
   </body>
   
   <style>
