Created Game Page

--- a/apps.html
+++ b/apps.html
@@ -1,15 +1,38 @@
 <html>
+  
+  <body>
+    <h1> Iman's Website </h1>
+    <h2> Games </h2>
+    
+    <ul>
+   <li><a href="index.html">Home Page</a></li>
+     <li><a href="apps.html">Games</a></li>
+    <li><a href="index.html">More</a></li>
+  </ul>
+    <iframe src="https://scratch.mit.edu/projects/428812812/embed" 
+            allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/IgvmEz-ezPtuxcIQIbAWpyRdsWlgGVJoW4OZ7dtyXTw/embed"></iframe>
+  </body>
+  
+  <style>
+        body {
+            background-color: salmon;
+          }
 
-<body>
-
-// nav bar code here
-
-
-</body>
-
-<style>
-
-// nav bar style here
-
-
-</style>
+          h1 {
+  
+            color: white;
+            text-aligh: center;
+            font-size: 80px;
+  
+            }
+            h2 {
+  
+            color: white;
+            text-aligh: center;
+            font-size: 40px;
+  
+            }
+  </style>
+  
+</html>
