--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   
   <body>
+    <div class = "one">
     <h1> Iman's Website </h1>
-    
+      </dive>
     
     <ul>
     <li><a href="index.html">Home Page</a></li>
@@ -15,15 +16,15 @@
   
   <style>
         body {
-            background-color: salmon;
+            background-color: lightblue;
           }
 
-          h1 {
+         one {
   
             color: white;
             text-aligh: center;
             font-size: 80px;
-  
+            background-color: salmon; 
             }
   </style>
   
