--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-color: lightblue;
           }
 
-         one {
+         .one {
   
             color: white;
             text-aligh: center;
