--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <div class = "one">
     <h1> Iman's Website </h1>
-      </dive>
+      </div>
     
     <ul>
     <li><a href="index.html">Home Page</a></li>
