--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   
   <style>
         body {
-            background-color: lightblue;
+            background-color: salmon;
           }
 
          .one {
   
             color: white;
             text-aligh: center;
-            font-size: 80px;
+            font-size: 50px;
             background-color: salmon; 
             }
   </style>
