--- a/apps.html
+++ b/apps.html
@@ -9,12 +9,14 @@
      <li><a href="apps.html">Games</a></li>
     <li><a href="index.html">More</a></li>
   </ul>
+    // games
     <iframe src="https://scratch.mit.edu/projects/428812812/embed" 
             allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
             <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/IgvmEz-ezPtuxcIQIbAWpyRdsWlgGVJoW4OZ7dtyXTw/embed"></iframe>
   </body>
   
   <style>
+    // sets color of text/background
         body {
             background-color: salmon;
           }
